Some small css changes.

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ html,
 div.board,
 div#react-container {
     height: 100%;
-    overflow: hidden;
+    overflow-x: visible;
+    overflow-y: hidden;
 }
 
 body {
@@ -25,7 +26,6 @@ div.board {
     background: -ms-radial-gradient(center, ellipse cover, #eab92d 57%, #c79810 99%);
     background: radial-gradient(ellipse at center, #eab92d 57%, #c79810 99%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eab92d', endColorstr='#c79810', GradientType=1);
-
 }
 
 div.note {
@@ -33,14 +33,18 @@ div.note {
     width: 150px;
     background-color: yellow;
     margin: 2px 0;
-    position: relative;
+    position: absolute;
     cursor: -webkit-grab;
+    cursor: -moz-grab;
+    cursor: grab;
     -webkit-box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, .2);
     box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, .2);
 }
 
 div.note:active {
     cursor: -webkit-grabbing;
+    cursor: -moz-grabbing;
+    cursor: grabbing;
 }
 
 div.note p {
@@ -65,7 +69,7 @@ div.note button {
     margin: 2px;
 }
 
-div.note > textarea {
+div.note > input {
     height: 75%;
     background: rgba(255, 255, 255, .5);
 }
@@ -91,4 +95,12 @@ div.board button {
 
 #remove {
   background-color: #d9534f;
+}
+
+#note-text-edit{
+  background-color: yellow;
+  border: none;
+  font-size: 22px;
+  width: 90%;
+  font-family: "Shadows Into Light", Arial;
 }
