--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Shadows+Into+Light);
+@import url('https://fonts.googleapis.com/css?family=Reenie+Beanie&display=swap');
 
 body,
 html,
@@ -28,29 +28,12 @@ div.board {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eab92d', endColorstr='#c79810', GradientType=1);
 }
 
-div.note {
-    height: 150px;
-    width: 150px;
-    background-color: yellow;
-    margin: 2px 0;
-    position: absolute;
-    cursor: -webkit-grab;
-    cursor: -moz-grab;
-    cursor: grab;
-    -webkit-box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, .2);
-    box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, .2);
-}
-
-div.note:active {
-    cursor: -webkit-grabbing;
-    cursor: -moz-grabbing;
-    cursor: grabbing;
-}
 
 div.note p {
     font-size: 22px;
     padding: 5px;
-    font-family: "Shadows Into Light", Arial;
+    width: 100%;
+    font-family: 'Reenie Beanie', cursive,Arial;
 }
 
 div.note:hover > span {
@@ -80,27 +63,86 @@ div.board button {
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.55);
 }
 
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+}
+
+div.note {
+  line-height: 1;
+  text-align:center;   
+  position:absolute;  
+  width: 275px;    
+  margin: 25px;    
+  min-height:200px;
+  max-height:200px; 
+  border:1px solid #E8E8E8;  
+  border-top:60px solid #fdfd86;
+  font-family:'Reenie Beanie';    
+  font-size:3em;      
+  border-bottom-right-radius: 60px 5px;
+  display:inline-block;    
+  box-shadow:2px 5px 12px rgba(0, 0, 0, 0.40);
+   background: #ffff88; /* Old browsers */
+   cursor: grab;
+background: -moz-linear-gradient(-45deg, #ffff88 81%, #ffff88 82%, #ffff88 82%, #ffffc6 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right bottom, color-stop(81%,#ffff88), color-stop(82%,#ffff88), color-stop(82%,#ffff88), color-stop(100%,#ffffc6)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* IE10+ */
+background: linear-gradient(135deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', endColorstr='#ffffc6',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+
+div.note:active {
+  margin: 25px;    
+  box-shadow:5px 7px 16px rgba(0, 0, 0, 0.40);
+  cursor: grabbing;
+}
+
+.rotate {
+  /* Safari */
+  -webkit-transform: rotate(-10deg);
+  /* Firefox */
+  -moz-transform: rotate(-10deg);
+  /* IE */
+  -ms-transform: rotate(-10deg);
+  /* Opera */
+  -o-transform: rotate(-10deg);
+  /* Internet Explorer */
+  filter: progid: DXImageTransform.Microsoft.BasicImage(rotation=1);
+}
+
+
 #add {
-  background-color: #5cb85c;
-  height: 3em;
+  background-color: #4CAF50;
 }
 
 #edit {
-  background-color: #337ab7;
+  background-color: #008CBA;
+  padding: 7px 12px;
 }
 
 #save {
-  background-color: #5cb85c;
+  background-color: #4CAF50;
+  padding: 7px 12px;
 }
 
 #remove {
-  background-color: #d9534f;
+  background-color: #f44336;
+  padding: 7px 12px;
 }
 
 #note-text-edit{
-  background-color: yellow;
+  background-color: #ffff88;
   border: none;
   font-size: 22px;
   width: 90%;
-  font-family: "Shadows Into Light", Arial;
+  font-family: 'Reenie Beanie', cursive, Arial;
 }
