--- a/src/index.css
+++ b/src/index.css
@@ -6,31 +6,32 @@ div.board,
 div#react-container {
     height: 100%;
     overflow-x: visible;
-    overflow-y: hidden;
+    overflow-y: visible;
 }
 
 body {
+    height: 100%;
     margin: 0;
     padding: 0;
-}
-
-div.board {
-    background-color: brown;
-    width: 100%;
-    height: 1000px;
     background: #e2e2e2;
-    background: -moz-radial-gradient(center, ellipse cover, #e2e2e2 57%, #dadada 99%);
+    /* background: -moz-radial-gradient(center, ellipse cover, #e2e2e2 57%, #dadada 99%);
     background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(57%, #e2e2e2), color-stop(99%, #dadada));
     background: -webkit-radial-gradient(center, ellipse cover, #e2e2e2 57%, #dadada 99%);
     background: -o-radial-gradient(center, ellipse cover, #e2e2e2 57%, #dadada 99%);
     background: -ms-radial-gradient(center, ellipse cover, #e2e2e2 57%, #dadada 99%);
     background: radial-gradient(ellipse at center, #e2e2e2 57%, #dadada 99%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eab92d', endColorstr='#c79810', GradientType=1);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eab92d', endColorstr='#c79810', GradientType=1); */
+}
+
+div.board {
+    background-color: #e2e2e2;
+    width: 100%;
+    height: 100vh;
 }
 
 
 div.note p {
-    font-size: 22px;
+    font-size: 2rem;
     padding: 5px;
     width: 100%;
     font-family: 'Reenie Beanie', cursive,Arial;
@@ -43,7 +44,6 @@ div.note:hover > span {
 div.note > span {
     position: absolute;
     bottom: 2px;
-    right: 2px;
     opacity: 0;
     transition: opacity .25s linear;
 }
@@ -63,25 +63,14 @@ div.board button {
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.55);
 }
 
-.button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 18px;
-}
-
 div.note {
   line-height: 1;
   text-align:center;   
   position:absolute;  
-  width: 275px;    
+  width: 15rem;    
   margin: 25px;    
-  min-height:200px;
-  max-height:200px; 
+  min-height:12rem;
+  max-height:15rem; 
   border:1px solid #E8E8E8;  
   border-top:60px solid #fdfd86;
   font-family:'Reenie Beanie';    
@@ -119,9 +108,29 @@ div.note:active {
   filter: progid: DXImageTransform.Microsoft.BasicImage(rotation=1);
 }
 
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+}
+
 
 #add {
-  background-color: #4CAF50;
+  color: #4CAF50;
+  outline: none;
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  right: 1rem;
+  bottom: 1rem;
+  font-size: 3rem;
+  cursor: pointer;
+  border-radius: 50%;
 }
 
 #edit {
