--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ div.note p {
     font-size: 2rem;
     padding: 5px;
     width: 100%;
+    color: rgb(83, 83, 83);
     font-family: 'Reenie Beanie', cursive,Arial;
 }
 
