--- a/src/index.css
+++ b/src/index.css
@@ -105,6 +105,7 @@ div.note:active {
 }
 
 .rotate {
+  transform: rotate(-10deg);
   /* Safari */
   -webkit-transform: rotate(-10deg);
   /* Firefox */
