--- a/src/index.css
+++ b/src/index.css
@@ -3,18 +3,19 @@
 
 body,
 html,
-div.board,
-div#react-container {
-    height: 100%;
-    overflow-x: visible;
-    overflow-y: visible;
+div#root{
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+div.container-flex {
+  height: 100%;
 }
 
 body {
-    height: 100%;
     margin: 0;
     padding: 0;
-    background: #e2e2e2;
     /* background: -moz-radial-gradient(center, ellipse cover, #e2e2e2 57%, #dadada 99%);
     background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(57%, #e2e2e2), color-stop(99%, #dadada));
     background: -webkit-radial-gradient(center, ellipse cover, #e2e2e2 57%, #dadada 99%);
@@ -25,9 +26,9 @@ body {
 }
 
 div.board {
-    background-color: #e2e2e2;
+    background-color: #d4d4d4;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 
